# Flashcards

./: .gitignore  CMakeLists.txt  Main.qml  config.ini.template  main.cpp  readme.md  resources.qrc
android/: AndroidManifest.xml
authorization/: SignInForm.qml  authmanager.cpp  authmanager.h
components/: MyButton.qml  TopBar.qml
controllers/: appcontroller.cpp  appcontroller.h  logincontroller.cpp  logincontroller.h  session.cpp  session.h
dashboard/: dashboard.qml
services/: authservice.cpp  authservice.h
